# DSdemo

./: .gitignore  README.md  pyproject.toml
notebooks/: mlflow_demo.ipynb
