[project]
name = "DSdemo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gal Petkovšek", email = "gal.petkovsek@medius.si"},
]
dependencies = [
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "ipykernel>=6.29.5",
    "mlflow>=2.16.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
